Correct wrong home link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<div id="page" align="left">
 				<div id="titlebar">
 					<h1>xyzy engine docs</h1>
-					<p><a href="/">home</a> | (last updated 9/30/2024)</p>
+					<p><a href="/xyzydocs/">home</a> | (last updated 9/30/2024)</p>
 				</div>
 				<hr>
 				<div id="content">
