remove bad swear word (roblox)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				</div>
 				<hr>
 				<div id="content">
-					<p>lorem ipsum dolor sit amet fuck off</p>
+					<p>lorem ipsum dolor sit amet</p>
 				</div>
 			</div>
 		</center>
