add text and docs map

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="/xyzydocs/style.css">
 	</head>
 	<body id="light">
 		<center>
@@ -12,7 +12,46 @@
 				</div>
 				<hr>
 				<div id="content">
-					<p>lorem ipsum dolor sit amet</p>
+					<h2>jagshemash my name a xyzy</h2>
+					<p>so you've stumbled across my engine, either from tr64 or roblox search results<br>
+					   hello :DDDDDDDDDDDDD</p>
+					<p>i'm aiming to make a version of robot 64 that's way easier to mod cause the original engine sucks</p>
+					<hr>
+					<div id="doctree">
+						<small>⚠️ warning<br>
+							i would recommend anyone only go as far as making custom scenes for their mods<br>
+							for any issues, bugs, nits related to the engine, contact me on disc at x.y.z.y</small>
+						<ol>
+						<li><a href="/xyzydocs/1">introduction</a>
+							<ol>
+							<li><a href="/xyzydocs/1#1">mentality & philosophy</a></li>
+							<li><a href="/xyzydocs/1#2">differences from r64 engine</a></li>
+							<li><a href="/xyzydocs/1#3">new features</a></li>
+							</ol>
+						</li>
+						<li><a href="/xyzydocs/2">basic modding</a>
+							<ol>
+							<li><a href="/xyzydocs/2#1">structure</a></li>
+							<li><a href="/xyzydocs/2#2">map editing</a></li>
+							<li><a href="/xyzydocs/2#4">custom entities</a></li>
+							<li><a href="/xyzydocs/2#5">moveset modifications</a></li>
+							</ol>
+						</li>
+						<li><a href="/xyzydocs/3">advanced modding</a>
+							<ol>
+							<li><a href="/xyzydocs/3#1">custom scenes</a></li>
+							<li><a href="/xyzydocs/3#2">init scripts</a></li>
+							<li><a href="/xyzydocs/3#3">custom modules</a></li>
+							<li><a href="/xyzydocs/3#4">local events</a></li>
+							</ol>
+						</li>
+						<li><a href="/xyzydocs/4">server mods</a>
+							<ol>
+							<li><a href="/xyzydocs/4#1">events</a></li>
+							</ol>
+						</li>
+						</ol>
+					</div>
 				</div>
 			</div>
 		</center>
