remove horrible reference
borat sucks :3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				</div>
 				<hr>
 				<div id="content">
-					<h2>jagshemash my name a xyzy</h2>
+					<h2>hi im xyzy</h2>
 					<p>so you've stumbled across my engine, either from tr64 or roblox search results<br>
 					   hello :DDDDDDDDDDDDD</p>
 					<p>i'm aiming to make a version of robot 64 that's way easier to mod cause the original engine sucks</p>
